...
                            padding: const EdgeInsets.all(8.0),
                            child: TextFormField(
                              key: const Key('EventTitleKey'),
                              readOnly: event.status == EventStatus.inFuture ||
                                      widget.eventId == null
...
                                  icon: Icon(Icons.title),
                                  border: OutlineInputBorder(),
                                  hintText: 'Enter event Title'),
                              validator: (value) {
                                if (value == null || value.isEmpty) {
...
                            padding: const EdgeInsets.all(8.0),
                            child: TextFormField(
                              key: const Key('EventDescriptionKey'),
                              readOnly: event.status == EventStatus.inFuture ||
                                      widget.eventId == null
...
                                  icon: Icon(Icons.description),
                                  border: OutlineInputBorder(),
                                  hintText: 'Enter event description'),
                              validator: (value) {
                                if (value == null || value.isEmpty) {
...
                            padding: const EdgeInsets.all(8.0),
                            child: TextFormField(
                              key: const Key('EventNumberKey'),
                              readOnly: event.status == EventStatus.inFuture ||
                                      widget.eventId == null
...
                                  icon: Icon(Icons.numbers),
                                  border: OutlineInputBorder(),
                                  hintText: 'Enter number of places'),
                              validator: (value) {
                                if (value == null || value.isEmpty) {
...
                            padding: const EdgeInsets.all(8.0),
                            child: TextFormField(
                              key: const Key('EventStartDateKey'),
                              readOnly: true,
                              controller: _startDateTextController,
...
                                  icon: Icon(Icons.calendar_today_rounded),
                                  border: OutlineInputBorder(),
                                  hintText: 'Enter start date'),
                              onTap: () async {
                                if (widget.eventId != null &&
...
                            padding: const EdgeInsets.all(8.0),
                            child: TextFormField(
                              key: const Key('EventEndDateKey'),
                              readOnly: true,
                              controller: _endDateTextController,
...
                                  icon: Icon(Icons.calendar_today_rounded),
                                  border: OutlineInputBorder(),
                                  hintText: 'Enter end date'),
                              onTap: () async {
                                if (widget.eventId != null &&
...
                            padding: const EdgeInsets.all(8.0),
                            child: TextFormField(
                              key: const Key('EventLocationKey'),
                              readOnly: true,
                              controller: _locationTextController,
...
                                  icon: Icon(Icons.location_on_outlined),
                                  border: OutlineInputBorder(),
                                  hintText: 'Enter location'),
                              onTap: () async {
                                if (widget.eventId != null &&
...
                                            ),
                                            buttonText:
                                                Text('Choose categories'),
                                            initialValue: event.categories,
                                            items: categories
...
                                      },
                                      child: const Text(
                                        'Add new category',
                                        style: TextStyle(fontSize: 20),
                                      ),
...
                                                          },
                                                          child:
                                                              const Text('OK'),
                                                        ),
                                                      ],
...
                                    onPressed: () =>
                                        context.go('/organizerPanel'),
                                    child: const Text('Cancel'),
                                  ),
                                ],
...
