...
            key: key,
            child: TextFormField(
              controller: controller,
              decoration: const InputDecoration(
                  icon: Icon(Icons.title),
                  border: OutlineInputBorder(),
                  hintText: 'category name'),
              validator: (value) {
                if (value == null || value.isEmpty) {
                  return 'Please enter category name';
                }
                return null;
              },
...
                  }
                },
                key: const Key('AddCategoryKey'),
                child: const Text('Add')
                ),
            TextButton(
                key: const Key('CancelCategoryKey'),
                onPressed: () => context.pop(), child: const Text('Cancel'))
          ],
        );
      });
}

